<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textSize="20dp"
    android:background="@drawable/background3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                style="@style/tvTwo"
                android:paddingLeft="50dp"
                android:text="@string/zhuce_xml1"
                android:textColor="#00FF00"
                android:textSize="60dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                style="@style/tvTwo"
                android:text="@string/zhuce_xml2"

                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_name"
                style="@style/etOne"
                android:hint="@string/zhuce_xml3"
                android:paddingLeft="35dp"
                android:textColorHint="@color/white"
                android:background="@drawable/blackground"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/mima1"
                style="@style/tvTwo"
                android:text="@string/zhuce_xml4"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/pwd1"
                style="@style/etOne"
                android:paddingLeft="35dp"
                android:hint="@string/zhuce_xml5"
                android:textColorHint="@color/white"
                android:inputType="textPassword"

                android:background="@drawable/blackground"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/mima2"
                style="@style/tvTwo"
                android:text="密码"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/pwd2"
                style="@style/etOne"
                android:hint="@string/zhuce_xml7"
                android:inputType="textPassword"
                android:paddingLeft="35dp"
                android:background="@drawable/blackground"
                android:textColorHint="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <!--  验证码部分  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <!--  第四个文本编辑框  输入验证码  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/et_loginactivity_phoneCodes"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/blackground"
                    android:hint="@string/zhuce_xml8"
                    android:paddingLeft="20dp"
                    android:textColorHint="@android:color/white"

                    android:textSize="15dp" />

                <ImageView

                    android:id="@+id/iv_registeractivity_showCode"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="-10dp"
                    android:onClick="onClick"
                    android:layout_weight="1.5"

                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

<!--            <Button-->
<!--                android:id="@+id/genghuang"-->
<!--                android:layout_width="193dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_marginLeft="220dp"-->
<!--                android:background="@null"-->
<!--                android:gravity="center"-->
<!--                android:text="看不清，换一张"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="18sp" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                style="@style/tvTwo"
                android:layout_height="wrap_content"
                android:text="@string/zhuce_xml9"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/zhuce_xml10"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/rb_girl"
                    style="@style/tvTwo"
                    android:text="@string/zhuce_xml11"
                    android:textSize="20dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhuce_xml12"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/cb_sing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhuce_xml13"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/cb_dance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhuce_xml14"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/cb_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhuce_xml15"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/btn_submit"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"

        android:background="#00000000"
        android:gravity="center"
        android:text="@string/zhuce_xml16"
        android:textColor="@android:color/white"
        android:textSize="25dp" />
</RelativeLayout>
